# pineforge-engine

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
benchmarks/: .gitignore  README.md  compare.py  compare_indicators.py  package.json  paths.py  pyproject.toml  run_all.sh
benchmarks/results/: cloud_compile_drift.md  indicator_comparison.md  speed.md  summary.md  trade_comparison.md
benchmarks/runners/: _add_pine_license.py  _drift_report.py  _emit_generated_cpp.py  bootstrap_strategies.py  cloud_compile.py  compile_bench_strategy.py  fetch_extended_ohlcv.py  promote_corpus_probes.py  regenerate_pineforge_trades.py  run_pineforge_canonical.cpp  run_pinets_canonical.mjs  run_pynecore.py
benchmarks/speed/: CMakeLists.txt  aggregate.py  pineforge_bench.cpp  time_pineforge_docker.py  time_pinets.mjs  time_pynecore.py  time_vectorbt.py
benchmarks/throughput/: README.md  benchmark_results.json  grid_search_repro.py  plot_quartile.py  reproduce.sh  time_throughput_docker.py
cmake/: PineForgeConfig.cmake.in  PineForgeVersion.cmake
cmake/smoke_consumer/: CMakeLists.txt  main.c
docker/: Dockerfile  README.md  entrypoint.sh  run_json.py  run_json_diagnostics_test.py  run_json_syminfo_test.py
docs/: Doxyfile  README.md  build.sh  cheatsheet-runtime-and-execution.md  coverage.md  pine_v6_audit_master.md  pine_v6_coverage_detail.md  pine_v6_feature_backlog.md  pine_v6_sprint_regression_report.md  production-readiness-findings.md  realtime-contract-3-session-report.md  tv-parity-probe-spec.md
docs/_theme/: custom.css  footer.html  header.html
docs/design/: realtime-execution-audit.md
docs/designed-probes/: README.md
docs/designed-probes/input-color-packed-defval-01/: README.md  strategy.pine
docs/designed-probes/input-source-runtime-override-high-01/: README.md  inputs.json  strategy.pine
docs/designed-probes/input-source-subscript-hl2-01/: README.md  strategy.pine
docs/designed-probes/syminfo-metadata-injection-eng-only-01/: README.md  inputs.json  (+1 more)
docs/issues/: cap-day-boundary-chart-tz-precision.md
docs/pages/: abi-stability.md  configuration.md  coverage.md  examples-c.md  examples-magnifier.md  examples-multi.md  examples-python-sweep.md  examples-rust.md  ffi-python.md  getting-started.md  index.md  install.md  integration-cmake.md  lifecycle.md  magnifier.md  metrics.md  mtf.md  report-schema.md  streaming.md  timeframes.md  tutorial-macd.md
include/pineforge/: bar.hpp  color.hpp  drawing.hpp  engine.hpp  fxmacrodata.hpp  generic_matrix.hpp  log.hpp  magnifier.hpp  map.hpp  math.hpp  matrix.hpp  metrics.hpp  na.hpp  pineforge.h  series.hpp  session_time.hpp  str_utils.hpp  ta.hpp  timeframe.hpp  version.h.in
performance/: README.md  benchmark_results.json  grid_search_repro.py
performance_reproduction/: README.md  plot_quartile.py  reproduce.sh
scripts/: check_c_abi_runtime.py  cov_union.py  coverage.sh  crossvalidate_metrics.py  derive_corpus_feeds.py  derive_corpus_feeds_self_test.py  fingerprint_self_test.py  migrate_benchmarks_assets_to_private_submodule.sh  migrate_corpus_to_private_submodule.sh  pf_release_run.py  regen_corpus_cpp.sh  regen_validation_artifacts.sh  regen_validation_report.py  run_corpus.sh  run_corpus_self_test.py  run_filter_repo_strip_private_fixtures.sh  run_strategy.py  run_stream_corpus.py  run_stream_corpus_mmap.py  test_run_strategy_identity.py  test_verify_corpus_metrics.py  validation_report.css  validation_report_self_test.py  verify_corpus.py  verify_self_test.py
scripts/templates/: LEGAL_PRIVATE_BENCHMARK_ASSETS.md
src/: c_abi.cpp  engine_fills.cpp  engine_internal.hpp  engine_lower_tf.cpp  engine_metrics.cpp  engine_order_events.cpp  engine_orders.cpp  engine_path_resolve.cpp  engine_report.cpp  engine_risk.cpp  engine_run.cpp  engine_security.cpp  engine_strategy_commands.cpp  engine_stream.cpp  engine_trade_accessors.cpp  fxmacrodata.cpp  magnifier.cpp  math.cpp  matrix.cpp  session_time.cpp  str_utils.cpp  ta_extremes_volume.cpp  ta_misc.cpp  ta_moving_averages.cpp  ta_oscillators.cpp  ta_volatility_trend.cpp  timeframe.cpp  timezone.cpp  timezone.hpp
strategies/rl-qlearn/: CMakeLists.txt  README.md  qtable-eth-15m.txt  run_rl.py  strategy.cpp  train_rl.py
tests/: CMakeLists.txt  test_accounting_reconciliation.cpp  test_adversarial_ohlcv.cpp  test_affordability_fx.cpp  test_c_abi.c  test_c_abi_setters.cpp  test_calc_on_order_fills.cpp  test_calendar_aggregation_wm.cpp  test_cascade_exit_gapjump.cpp  test_chart_ema_na_warmup.cpp  test_chart_timezone.cpp  test_close_all_coqueued_entry.cpp  test_coof_cascade_eligibility.cpp  test_declined_reversal_close_leg.cpp  test_default_flat_market_gross_admission.cpp  test_default_qty_signal_freeze.cpp  test_deferred_flip_carry_close_only.cpp  test_determinism_reproducibility.cpp  test_direct_short_reversal_affordability.cpp  test_dmi_parity.cpp  test_drawing.cpp  test_dual_entry_placement_sizing.cpp  test_engine_risk.cpp  test_engine_trade_accessors.cpp  test_entrypoint_indir.sh  test_exit_id_scoped_erase.cpp  test_exit_path_segment_tiebreak.cpp  test_explicit_qty_fill_admission.cpp  test_fills_edge.cpp  test_frozen_flat_gap_reject.cpp  test_full_close_while_pyramiding.cpp  test_fxmacrodata.cpp  test_generic_matrix_bool_dispatch.cpp  test_generic_matrix_bool_proxy.cpp  test_generic_matrix_primitives.cpp  test_generic_matrix_series.cpp  test_generic_matrix_udt.cpp  test_get_input_int64.cpp  test_get_input_source.cpp  test_handle_reuse_reset.cpp  (+78 more)
tutorial/: CMakeLists.txt  README.md  run.py  run.sh  run_advanced.py  run_mtf.py  run_stream.py
tutorial/data/: btcusdt_15m_7d.csv  fetch_btcusdt.py
tutorial/macd/: generated.cpp  regen.sh  strategy.pine
tutorial/mtf/: generated_htf.cpp  generated_ltf.cpp  strategy_htf.pine  strategy_ltf.pine
validation-adhoc/4emarsi-commission-slippage-ethusdt/: inputs.json  tv_commission_crack.py  tv_equity_crack.py  usdtusd_daily_close.json
(+30 files in other folders)
